glx/testdata/valid/event-minimal.glx
events:
  event-12345678:
    type: "birth"
