glx/testdata/invalid/event-missing-place.glx
# Invalid: References non-existent place
events:
  event-12345678:
    type: birth
    place: place-nonexistent
